doc update, minor ui changes
