# app/Http/Controllers/MainController.php
@@ -92,7 +92,8 @@ class MainController extends Controller
      *     security={{"bearerAuth": {}}},
      *     operationId="createTool",
      *     tags={"tools"},
-     *     summary="create a tool record on database",
+     *     summary="create a tool record in the database",
+     *     
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
@@ -106,10 +107,22 @@ class MainController extends Controller
      *     @OA\Response(
      *         response=201,
      *         description="Successful operation",
+     *         @OA\JsonContent(
+     *      type="object",
+     *      @OA\Property(property="title", type="string", example="My Tool Title"),
+     *      @OA\Property(property="link", type="string", example="https://mytoolwebsite.com.br"),
+     *      @OA\Property(property="description", type="string", example="A cool description for my tool"),
+     *      @OA\Property(property="tags", description="tool tags", type="array", example={"gardening","woodworking"}, @OA\Items(type="string")),
+     *      @OA\Property(property="id", type="int", example="50"),
+     *   ),
      *     ),
      *     @OA\Response(
      *         response=401,
      *         description="Unathenticated", 
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Invalid data"
      *     ),
      *     @OA\Response(
      *         response=500,
@@ -191,7 +204,7 @@ class MainController extends Controller
             $tool->delete();
 
             return response()->json([
-                'success' => 'Tool id: ' . $r->id . ' deleted'
+                'success' => 'Tool id ' . $r->id . ' deleted'
             ], 200);
         } 
         catch (Throwable $e) {
@@ -232,7 +245,15 @@ class MainController extends Controller
      * ),
      *     @OA\Response(
      *         response=200,
-     *         description="Successful operation"
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *      type="object",
+     *      @OA\Property(property="id", type="int", example="40"),
+     *      @OA\Property(property="title", type="string", example="My Tool Title updated!"),
+     *      @OA\Property(property="link", type="string", example="https://mynewtoolwebsite.com.br"),
+     *      @OA\Property(property="description", type="string", example="A really cool description for my tool"),
+     *      @OA\Property(property="tags", description="tool tags", type="array", example={"automotive","plumbing"}, @OA\Items(type="string")),
+     *   ),
      *     ),
      *     @OA\Response(
      *         response=401,
@@ -241,6 +262,10 @@ class MainController extends Controller
      *     @OA\Response(
      *         response=404,
      *         description="Tool id not found", 
+     *     ),
+     *      @OA\Response(
+     *         response=422,
+     *         description="Invalid data"
      *     ),
      *     @OA\Response(
      *         response=500,
